--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 				<div class="text-center">
 					<div class="author-img" style="
-    background-image: url('PASPORT_SIZE_PHOTO.png');
+    background-image: url('PASPORT_SIZE_PHOTO.JPG');
     width: 200px;
     height: 200px;
     background-size: cover;
@@ -123,7 +123,7 @@
 								</div>
 								<div class="row">
 									<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
-										<a href="https://drive.google.com/file/d/1vkzrVP4XOisQapuEhwumQ8MCQvkpPOfq/view?usp=sharing"
+										<a href="Tharik resume.docx"
 											target="_blank">
 											<div class="services color-4">
 												<span class="icon2">
