--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 				<div class="text-center">
 					<div class="author-img" style="
-    background-image: url('PASPORT_SIZE_PHOTO.JPG');
+    background-image: url('PASPORT_SIZE_PHOTO.png');
     width: 200px;
     height: 200px;
     background-size: cover;
@@ -112,10 +112,9 @@
 											<h2 class="colorlib-heading">About Me</h2>
 											<p>
 												<font size="3.8">
-													[cite_start]<strong>I’m Tharik Grishan S</strong>, a passionate Data Science graduate with a foundation in **machine learning, computer vision, and statistical modeling**[cite: 5]. [cite_start]I'm driven to apply my technical expertise and analytical thinking to transform complex data into actionable business solutions and strategic insights[cite: 6]. [cite_start]I'm currently pursuing my Masters in Data Science at Christ (Deemed to be University), Yeshwanthpur Campus, Bangalore[cite: 8].
+													<strong>I’m Tharik Grishan S</strong>, a passionate Data Science graduate with a foundation in Machine Learning, Computer Vision, and Statistical Modeling.I'm driven to apply my technical expertise and analytical thinking to transform complex data into actionable business solutions and strategic insights.
 												</font>
 											</p>
-											<font size="2.8">Driven to transform complex data into actionable business solutions.</font>
 											<p>&nbsp;<br>&nbsp;</p>
 
 										</div>
@@ -123,7 +122,7 @@
 								</div>
 								<div class="row">
 									<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
-										<a href="Tharik resume.docx"
+										<a href="https://drive.google.com/file/d/1vkzrVP4XOisQapuEhwumQ8MCQvkpPOfq/view?usp=sharing"
 											target="_blank">
 											<div class="services color-4">
 												<span class="icon2">
@@ -156,18 +155,6 @@
 										</a>
 									</div>
 									
-									<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-										<a href="tel:+917397618306" target="_blank">
-											<div class="services color-3">
-												<span class="icon2">
-													<i class="icon-phone"></i>
-													<h3>Phone</h3>
-												</span>
-											</div>
-										</a>
-									</div>
-									
-
 								</div>
 
 							</div>
@@ -330,10 +317,10 @@
 												<i class="icon-briefcase"></i>
 											</div>
 											<div class="timeline-label">
-												[cite_start]<h2>AI Intern - Zenthic AI <span>06/2025-09/2025</span> [cite: 19]</h2>
+												<h2>AI Intern - Zenthic AI <span>06/2025-09/2025</span></h2>
 												<ul>
-													[cite_start]<li>Built an **autonomous self-checkout system** using Python, Streamlit, and Computer vision[cite: 20].</li>
-													[cite_start]<li>The system included real-time barcode scanning, UPI payment integration, and SQL Lite data management[cite: 20].</li>
+													<li>Built an autonomous self-checkout system using Python, Streamlit, and Computer vision.</li>
+													<li>The system included real-time barcode scanning, UPI payment integration, and SQL Lite data management.</li>
 												</ul>
 											</div>
 										</div>
@@ -345,10 +332,10 @@
 												<i class="icon-briefcase"></i>
 											</div>
 											<div class="timeline-label">
-												[cite_start]<h2>Data Science Intern - CUT-T <span>05/2025-07/2025</span> [cite: 17]</h2>
+												<h2>Data Science Intern - CUT-T <span>05/2025-07/2025</span></h2>
 												<ul>
-													[cite_start]<li>Worked on **Tamil text classification** to detect offensive content using advanced NLP models such as MuRIL, IndicBERT, and RoBERTa[cite: 17].</li>
-													[cite_start]<li>Implemented **Explainable AI (XAI) techniques** like LIME and SHAP to interpret model predictions and analyze feature importance[cite: 18].</li>
+													<li>Worked on Tamil text classification to detect offensive content using advanced NLP models such as MuRIL, IndicBERT, and RoBERTa.</li>
+													<li>Implemented Explainable AI (XAI) techniques like LIME and SHAP to interpret model predictions and analyze feature importance.</li>
 												</ul>
 											</div>
 										</div>
@@ -392,10 +379,10 @@
 											<div id="collapseMasters" class="panel-collapse collapse in" role="tabpanel"
 												aria-labelledby="headingMasters">
 												<div class="panel-body">
-													<p>Currently pursuing M.Sc. [cite_start]Data Science at <strong>Christ (Deemed to be University), Yeshwanthpur Campus, Bangalore</strong>[cite: 8].</p>
+													<p>Currently pursuing M.Sc Data Science at <strong>Christ (Deemed to be University), Yeshwanthpur Campus, Bangalore</strong>.</p>
 													<ul>
-														[cite_start]<li>**2024 - Present** [cite: 8]</li>
-														[cite_start]<li>Percentage: 68.13% [cite: 8]</li>
+														<li>2024 - Present</li>
+														<li>CGPA: 8.53 (till IVth Trimester)</li>
 													</ul>
 												</div>
 											</div>
@@ -414,10 +401,10 @@
 											<div id="collapseBachelors" class="panel-collapse collapse" role="tabpanel"
 												aria-labelledby="headingBachelors">
 												<div class="panel-body">
-													[cite_start]<p>Completed Bachelor's in Statistics at <strong>Loyola College, Chennai</strong>[cite: 8].</p>
+													<p>Completed Bachelor's in Statistics at <strong>Loyola College, Chennai</strong>.</p>
 													<ul>
-														[cite_start]<li>**2024** [cite: 8]</li>
-														[cite_start]<li>Percentage: 67.7% [cite: 8]</li>
+														<li>2021-2024</li>
+														<li>Percentage: 67.7%</li>
 													</ul>
 												</div>
 											</div>
@@ -436,10 +423,10 @@
 											<div id="collapseXII" class="panel-collapse collapse" role="tabpanel"
 												aria-labelledby="headingXII">
 												<div class="panel-body">
-													[cite_start]<p>Completed Class XII at <strong>Bethany Navajeevan Matric hr sec school, Kanyakumari</strong>[cite: 8].</p>
+													<p>Completed Class XII at <strong>Bethany Navajeevan Matric Higher Secondary School, Kanyakumari</strong>.</p>
 													<ul>
-														[cite_start]<li>**2021** [cite: 8]</li>
-														[cite_start]<li>Percentage: 91.24% [cite: 8]</li>
+														<li>2020-2021</li>
+														<li>Percentage: 91.24% </li>
 													</ul>
 												</div>
 											</div>
@@ -458,10 +445,10 @@
 											<div id="collapseX" class="panel-collapse collapse" role="tabpanel"
 												aria-labelledby="headingX">
 												<div class="panel-body">
-													[cite_start]<p>Completed Class X at <strong>Bethany Navajeevan Matric hr sec school, Kanyakumari</strong>[cite: 8].</p>
+													<p>Completed Class X at <strong>Bethany Navajeevan Matric Higher Secondary School, Kanyakumari</strong>.</p>
 													<ul>
-														[cite_start]<li>**2019** [cite: 8]</li>
-														[cite_start]<li>Percentage: 92.8% [cite: 8]</li>
+														<li>2018-2019</li>
+														<li>Percentage: 92.8%</li>
 													</ul>
 												</div>
 											</div>
@@ -493,7 +480,7 @@
 									</a>
 									<div class="desc">
 										<h3>AI-Powered Story Analysis Platform</h3>
-										[cite_start]<p>Developed a full-stack storytelling platform using **React.js and Django** to enable children and caregivers to safely explore and analyze stories[cite: 23]. [cite_start]The platform integrates **NLP and ML features** to distinguish between human and AI-generated content, promoting digital literacy and content transparency[cite: 24].</p>
+										<p>Developed a full-stack storytelling platform using React.js and Django to enable children and caregivers to safely explore and analyze stories.The platform integrates NLP and ML features to distinguish between human and AI-generated content, promoting digital literacy and content transparency.</p>
 										<p id="project-tool">Python | React.js | Django | NLP | ML</p>
 									</div>
 								</div>
